@@ -118,6 +118,10 @@ try_compile(
 	PQXX_HAVE_CMP
 	${PROJECT_BINARY_DIR}
 	SOURCES ${PROJECT_SOURCE_DIR}/config-tests/cmp.cxx)
+try_compile(
+	PQXX_HAVE_UNREACHABLE
+	${PROJECT_BINARY_DIR}
+	SOURCES ${PROJECT_SOURCE_DIR}/config-tests/unreachable.cxx)
 
 try_compile(
 	need_fslib
