@@ -22,5 +22,6 @@ PQXX_HAVE_SPAN	public	compiler
 PQXX_HAVE_STRERROR_R	internal	compiler
 PQXX_HAVE_STRERROR_S	internal	compiler
 PQXX_HAVE_THREAD_LOCAL       internal        compiler
+PQXX_HAVE_UNREACHABLE	public	compiler
 PQXX_HAVE_YEAR_MONTH_DAY	public	compiler
 VERSION	internal	autotools
