@@ -19,7 +19,6 @@
 #endif
 
 #include <string_view>
-#include <utility>
 
 /* End-user programs need not include this file, unless they define their own
  * transaction classes.  This is not something the typical program should want
