@@ -1,4 +1,5 @@
 7.7.4
+ - Use `std::unreachable()` where available.
 7.7.3
  - Fix up more damage done by auto-formatting.
  - New `result::for_each()`: simple iteration and conversion of rows.  (#528)
